# sample_export_cpp_class_dll_cmake

./: CMakeLists.txt  README.md
dependencies/: class.h
docs/: README.md
src/: main.cpp
